Cập nhật giao diện có brand bên client và admin & update khóa ngoại chỗ delete cho cate và brand